# RFP_AGENTS

./: README.md  agents.py  example.txt  main.py  pyproject.toml  requirements.txt  task.py
chroma_db/: chroma.sqlite3
data/: qa_database.xlsx
rfp_data/: Questions.txt
