[tool.poetry]
name = "rfp-agent"
version = "0.1.0"
description = ""
authors = ["austine.were <austine.were@turnkeyafrica.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langchain-groq = "^0.2.0"
pypdf2 = "^3.0.1"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
langchain-community = "^0.3.5"
pdfplumber = "^0.11.4"
langchain-openai = "^0.2.5"
python-docx = "^1.1.2"
pinecone-client = "^5.0.1"
chromadb = "^0.5.18"
tiktoken = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
